# List-the-Service

./: CMakeLists.txt  form.cpp  form.h  form.ui  main.cpp
proto/: listservices.proto
